--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.10",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
