--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "postcss": "^8.4.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-loading": "^2.0.3",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.10",
